@@ -5,7 +5,7 @@
 
 package Graph::Easy::As_graphviz;
 
-$VERSION = '0.31';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
