@@ -5,7 +5,7 @@
 
 package Graph::Easy::Base;
 
-$VERSION = '0.12';
+$VERSION = '0.74';
 
 use strict;
 
