@@ -6,7 +6,7 @@
 
 package Graph::Easy::Layout;
 
-$VERSION = '0.29';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
