@@ -6,7 +6,7 @@
 
 package Graph::Easy::Layout::Grid;
 
-$VERSION = '0.07';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
