@@ -5,7 +5,7 @@
 
 package Graph::Easy::Layout::Path;
 
-$VERSION = '0.16';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
